--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <section class="home">
       <div class="home-img">
-        <img src="wall-e1.jpg" alt="" />
+        <img src="wall-e1.jpg" alt="Wall-E" />
       </div>
       <div class="home-content">
         <h1>Hi, It's <span>Wall-E</span></h1>
@@ -41,6 +41,7 @@
           <a href="#"><i class="fa-brands fa-github"></i></a>
           <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
         </div>
         <a href="#" class="btn">Hire me</a>
       </div>
