--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="active"> Home</a>
         <a href="#">Services</a>
         <a href="#">Skills</a>
-        <a href="#">Education</a>
+        <a href="https://drive.google.com/file/d/1j3nMsW5ne7jDbV8SYtw6aFqUngbYgBVA/view?usp=drive_link">Education</a>
         <a href="https://drive.google.com/file/d/1ZUzcwCqvLlA083CcKIktgx62rtDXLIbV/view?usp=drive_link">Experience</a>
         <a href="#">Contact</a>
       </nav>
