--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#">Services</a>
         <a href="https://drive.google.com/file/d/1ZUzcwCqvLlA083CcKIktgx62rtDXLIbV/view?usp=drive_link">Skills</a>
         <a href="https://drive.google.com/file/d/1j3nMsW5ne7jDbV8SYtw6aFqUngbYgBVA/view?usp=drive_link">Education</a>
-        <a href="https://drive.google.com/file/d/1ZUzcwCqvLlA083CcKIktgx62rtDXLIbV/view?usp=drive_link">Experience</a>
+        <a href="https://drive.google.com/file/d/1ZUzcwCqvLlA083CcKIktgx62rtDXLIbV/view?usp=drive_link">Products</a>
         <a href="#">Contact</a>
       </nav>
     </header>
